# docs/swagger.yaml
@@ -25,6 +25,17 @@ definitions:
         type: string
         x-order: "1"
     type: object
+  models.RegisterRequest:
+    properties:
+      password:
+        example: "123456"
+        type: string
+        x-order: "2"
+      username:
+        example: admin
+        type: string
+        x-order: "1"
+    type: object
 host: localhost:3000
 info:
   contact: {}
@@ -68,37 +79,6 @@ paths:
       summary: Get all members
       tags:
       - Members
-    post:
-      consumes:
-      - application/json
-      description: สร้างสมาชิกใหม่โดยรับข้อมูลจาก JSON body
-      parameters:
-      - description: Member Data (username and password)
-        in: body
-        name: member
-        required: true
-        schema:
-          $ref: '#/definitions/models.Member'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.Member'
-        "400":
-          description: Invalid request body
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Could not create member
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Create a new member
-      tags:
-      - Auth
   /members/{id}:
     delete:
       description: ลบสมาชิกออกจากระบบตาม ID
@@ -161,6 +141,38 @@ paths:
       summary: Update a member
       tags:
       - Members
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: สร้างสมาชิกใหม่โดยรับข้อมูลจาก JSON body
+      parameters:
+      - description: Member Data
+        in: body
+        name: member
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Member'
+        "400":
+          description: Invalid request body
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Could not create member
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Create a new member
+      tags:
+      - Auth
 schemes:
 - http
 - https
